Added an intro page

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,6 +10,7 @@ website:
       - section: "Intro"
         contents:
           - index.qmd
+          - intro.qmd
       - section: "Process"
         contents:
           - sop.qmd
